# SSD

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  conanfile.py  mkdocs.yaml
alsa-examples/: CMakeLists.txt  pcm.c
cmake/: declare-ssd-target.cmake  ssd-target.cmake  ssd-test.cmake
containers/arm64/: Dockerfile
containers/debug-image/: Dockerfile
containers/sound-test/: dockerfile
containers/x64_86/: Dockerfile
contrib/: CMakeLists.txt
contrib/audio-file/: CMakeLists.txt
contrib/msfsm/: CMakeLists.txt
data/: arm64-profile.txt  arm64.ini  arm64.txt  debug.ini  default.cfg  linux-profile.txt  x64_86.ini
data/conan-configs/: debug.ini  x64_86.ini
docs/design/: sound.md
pulse/: CMakeLists.txt
pulse-audio-headers/: CMakeLists.txt
scripts/: build.py  build.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  callback-queue.cpp  callback-queue.hpp  callback.cpp  callback.hpp  exceptions.hpp  macros.hpp  plain-buffer.cpp  plain-buffer.hpp  ring-buffer.cpp  ring-buffer.hpp  shared-buffer.cpp  shared-buffer.hpp  thread-pool.cpp  thread-pool.hpp
src/common/tests/: CMakeLists.txt  callback-queue-test.cpp  plain-buffer-test.cpp  ring-buffer-test.cpp  thread-pool-test.cpp
src/pcm/: CMakeLists.txt  async-example.cpp  example.cpp  main.cpp  sync-example.cpp
src/pcm/mapped-pulse/: CMakeLists.txt  context.cpp  mainloop.cpp  simple.cpp  simple.hpp
src/pcm/mapped-pulse/channel-map/: channel-map.cpp
src/pcm/mapped-pulse/context/: common.hpp  context.cpp  operation.cpp  stream.cpp
src/pcm/mapped-pulse/mainloop/: common.hpp  mainloop.cpp  threaded-mainloop.cpp
src/pcm/mapped-pulse/tests/: CMakeLists.txt  context-test.cpp  mainloop-test.cpp  stream-test.cpp
src/pcm/mapped-pulse/trace/: trace.cpp  trace.hpp
src/pcm/mapped-pulse/utils/: channel-map.cpp  macros.hpp  utf8.cpp  util.cpp  version.cpp  xmalloc.cpp
src/pcm/protos/: CMakeLists.txt  hello-world.proto
src/pcm/protos/channel/: CMakeLists.txt  channel-map.proto
src/pcm/protos/client/: CMakeLists.txt  client-message.proto
src/pcm/protos/client/simple/: simple.proto
src/pcm/sync-protocol/: CMakeLists.txt  sync-protocol.cpp  sync-protocol.hpp
src/pcm/trace/: CMakeLists.txt  trace.cpp  trace.hpp
src/protos/: CMakeLists.txt  client-message.proto  holder.proto  server-message.proto
src/protos/client/: base.proto  context.proto  stream.proto
src/protos/common/: directives.proto  property-list.proto  stream-configuration.proto
src/protos/service/: base.proto  context.proto  stream.proto
src/protos/services/: sound-router.proto
src/ssd/: CMakeLists.txt  macros.hpp  main.cpp
src/ssd/core/: CMakeLists.txt  header.cpp  header.hpp  message.cpp  message.hpp  protocol.md  routing-service.cpp  routing-service.hpp  server.cpp  server.hpp  session.cpp  session.hpp
src/ssd/core/interfaces/: i-context.hpp  i-protocol.hpp  i-stream.hpp
src/ssd/core/session/: context.cpp  context.hpp  stream.cpp  stream.hpp
src/ssd/core/tests/: CMakeLists.txt  message-test.cpp
src/ssd/network/: CMakeLists.txt  message.cpp  message.hpp  server.cpp  server.hpp  session.cpp  session.hpp  sync-protocol.cpp  sync-protocol.hpp
src/ssd/network/interfaces/: CMakeLists.txt  i-message.hpp  i-protocol.hpp  protocol.md
src/ssd/network/protocols/: CMakeLists.txt
src/ssd/network/protocols/simple/: CMakeLists.txt  protocol.hpp
src/ssd/sound/: CMakeLists.txt  audio-handler.cpp  audio-handler.hpp  converter.cpp  converter.hpp  plain-buffer.cpp  plain-buffer.hpp  read-handle.cpp  read-handle.hpp  ring-buffer.cpp  ring-buffer.hpp  write-handle.cpp  write-handle.hpp
src/ssd/sound/dispatchers/: bass-router-dispatcher.cpp  bass-router-dispatcher.hpp  tube-dispatcher.cpp  tube-dispatcher.hpp
src/ssd/sound/interfaces/: i-audio-handler.hpp  i-dispatcher.hpp
src/ssd/sound/jobs/: CMakeLists.txt  async-dispatching-job.cpp  async-dispatching-job.hpp
src/ssd/sound/tests/: CMakeLists.txt  dispatchers-test.cpp  sample-converter-test.cpp
src/ssd/sounds/: CMakeLists.txt  audio-handler.cpp  audio-handler.hpp  converter.cpp  converter.hpp  read-handle.cpp  read-handle.hpp  ring-buffer.cpp  ring-buffer.hpp  write-handle.cpp  write-handle.hpp
src/ssd/sounds/dispatchers/: CMakeLists.txt  bass-router-dispatcher.cpp  bass-router-dispatcher.hpp  tube-dispatcher.hpp
src/ssd/sounds/interfaces/: CMakeLists.txt  i-audio-handler.hpp  i-dispatcher.hpp  i-stream.hpp
src/ssd/sounds/jobs/: async-dispatching-job.hpp
src/ssd/sounds/tests/: CMakeLists.txt  dispatchers-test.cpp  sample-converter-test.cpp
src/ssd/util/: CMakeLists.txt  callback-queue.cpp  callback-queue.hpp  config-loader.cpp  config-loader.hpp  thread-pool.hpp
src/ssd/util/tests/: CMakeLists.txt  config-loader-test.cpp
src/tests/: CMakeLists.txt  mocked-sound-handler.hpp  protocol-test.cpp
